refactor: Update project name and branding
This commit rebrands the project from "BalloonsByAks Interactive" to simply "BalloonsByAks" to align with the main company name. It also refactors various components to reflect this change and improve overall clarity and maintainability.

Key changes include:
- Renaming the `package.json` name to `balloonsbyaks`.
- Updating the `metadata.json` name and description.
- Removing the 'Admin' link from the header.
- Enhancing the Home section with testimonials and carousels.
- Refining the Arch Builder's visual composition and balloon size definitions.
- Adding a 'Management Portal' link in the footer.
- Improving textual descriptions in Gallery and FAQ sections for conciseness.
- Adding an `archived` field to the `Inquiry` type.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "balloonsbyaks-interactive",
+  "name": "balloonsbyaks",
   "private": true,
   "version": "0.0.0",
   "type": "module",
